--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dva Demo</title>
   <link rel="stylesheet" href="index.css" />
+  <style type="text/css">
+  	body {
+  		background: url(../src/chrome-ext/images/pic1.jpg) no-repeat center;
+  		background-size: 100%;
+  	}
+  </style>
 </head>
 <body>
 
